<resources>
    <string name="app_name">Shows-kristina-koneva</string>
    <string name="title_shows">Shows</string>
    <string name="login_title">Login</string>
    <string name="login_required_message">In order to continue please log in.</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="login">Login</string>
    <string name="welcome_message">Welcome, %s!</string>
    <string name="shows">Shows</string>
    <string name="lorem_short">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</string>
    <string name="reviews">Reviews</string>
    <string name="write_a_review">Write a Review</string>
    <string name="write_a_review_title">Write a review</string>
    <string name="comment">Comment</string>
    <string name="submit">Submit</string>
    <string name="no_reviews_yet">No reviews yet.</string>
    <string name="show_hide_empty_state">show/hide empty state</string>
    <string name="your_shows_are_not_showing_get_it">Your shows are not showing. Get it</string>
    <string name="shows_empty_state_message">Your shows are not showing. Get it?</string>
    <string name="invalid_email_error_message">Invalid email address!</string>
    <string name="invalid_password_error_message">Invalid password!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="review_status">%d REVIEWS, %.2f AVERAGE</string>
    <string name="username_placeholder">username</string>
    <string name="remember_me_checkbox_message">Remember me</string>
    <string name="example_email">username@gmail.com</string>
    <string name="change_profile_photo_button_text">Change profile photo</string>
    <string name="logout_button_text">Logout</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="logging_out_alert_message">Are you sure that you want to log out?</string>
    <string name="gallery_denied_permission_message">You have denied the storage permission to select an image.</string>
    <string name="data">data</string>
    <string name="denied_permissions_message">It looks like you have turned off the permissions required for this feature. They can be enabled under App settings.</string>
    <string name="go_to_settings">GO TO SETTINGS</string>
    <string name="default_text">default_text</string>
    <string name="profile_photo_jpg">profile_photo.jpg</string>
    <string name="images">images</string>
    <string name="intent_type_image">image/*</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat password</string>
    <string name="loading">Loading…</string>
    <string name="top_rated">Top rated</string>
    <string name="error_fetching_top_rated_shows_msg">Fetching top rated shows was unsuccessful</string>
    <string name="error_fetching_shows_msg">Fetching shows was unsuccessful</string>
    <string name="unsuccessful_registration_msg">Registration unsuccessful</string>
    <string name="unsuccessful_login_msg">Login unsuccessful</string>
    <string name="error_fetching_show_msg">Fetching show was unsuccessful</string>
    <string name="error_fetching_reviews_msg">Fetching reviews about show was unsuccessful</string>
    <string name="passwords_do_not_match_error_message">Password and repeat password do not match!</string>
    <string name="registration_successful">Registration successful!</string>
    <string name="no_internet_error_msg">You cannot login without Internet connection!</string>
    <string name="error_changing_profile_photo_msg">Changing profile photo was unsuccessful</string>
    <string name="error_changing_pp_offline_msg">You cannot change your profile photo while you are offline!</string>
    <string name="no_reviews_available">No reviews available.</string>
    <string name="error_fetching_user_info_msg">Fetching user info was unsuccessful</string>
</resources>