<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="20dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:text="@string/write_a_review_title"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="30dp"/>
        <ImageButton
            android:id="@+id/btnCloseDialog"
            android:layout_width="14dp"
            android:layout_height="14dp"
            android:src="@drawable/ic_close_dialog"
            android:layout_marginStart="150dp"/>
    </LinearLayout>

    <RatingBar
        android:id="@+id/rbRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:numStars="5"
        android:progressTint="#52368C"
        android:secondaryProgressTint="#00000000"
        android:stepSize="1"
        android:layout_marginTop="20dp"
        />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/tilComment"
        android:layout_width="342dp"
        android:layout_height="wrap_content"
        android:hint="@string/comment"
        android:layout_marginTop="10dp"
        android:textColorHint="@color/black"
        android:layout_gravity="center_horizontal">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etComment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:lines="10"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnSubmitReview"
        android:layout_width="342dp"
        android:layout_height="44dp"
        app:cornerRadius="21.5dp"
        android:backgroundTint="#52368C"
        android:text="@string/submit"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:enabled="false"
        android:layout_marginTop="20dp"/>



</LinearLayout>