<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/profilePhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/profile_photo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="24dp"
        >

    </ImageView>

    <TextView
        android:id="@+id/emailAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/example_email"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePhoto"
        android:gravity="center"
        android:textStyle="bold"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginTop="16dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnChangeProfilePhoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/emailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:cornerRadius="21.5dp"
        android:backgroundTint="@color/white"
        app:strokeColor="@color/purple"
        app:strokeWidth="2dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textColor="@color/purple"
        android:text="@string/change_profile_photo_button_text"
        android:textStyle="bold"
        android:textSize="17sp"
        android:textAllCaps="false"
        android:padding="8dp"
        android:layout_marginTop="16dp"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnChangeProfilePhoto"
        app:layout_constraintEnd_toEndOf="parent"
        app:cornerRadius="21.5dp"
        android:backgroundTint="@color/purple"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textColor="@color/white"
        android:text="@string/logout_button_text"
        android:textStyle="bold"
        android:textSize="17sp"
        android:textAllCaps="false"
        android:padding="8dp"
        />

</androidx.constraintlayout.widget.ConstraintLayout>